[package]
name = "FeOSMK1"
version = "0.1.0"
edition = "2024"
authors = ["Authors Harsh.shokka@gmail.com"]

[dependencies]
bootloader = "0.9.8"


[profile.dev]
panic = "abort" # disable stack unwinding on panic 

[profile.release]
panic = "abort" # disable stack unwinding on panic 

# double brackets means keys that can appear multiple times
[[bin]]
name = "FeOSMK1"
test = false # do not build binary in test mode 
bench = false # do not build binary in bench mode 

